@startuml


package persistence.entity.server{

    class Server{
    seq : Integer
    name : String
    ip : String
    }

}

package persistence.entity.author{
    class Author{
        seq : Integer
        name : String
        regDate : Date
    }
}

package persistence.entity.member{
class Member {
    seq : Integer
    id : String
    password : String
    name : String
    type : MemberType
}

enum MemberType{
   USER,ADMIN
}
}
package persistence.entity.book {
abstract class Book{
    seq : Integer
    title : String
    author : Author
    regDate : Date
    expireDate : Date
    register : Member
    descriptionUrl : String
    tags : List<Tag>
}

class Tag {
    seq : Integer
    value : String
}
Book <|-- ScanBook
Book <|-- RidiBook

class ScanBook{
    fileName : String
    fileHash : String
    path : String
    server : Server
    size : Integer
}

class RidiBook{
    url : String
    ridiUserId : String
}
}

@enduml